# pydns

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  color_maps.py  fortran_dns_min.py  main_min.py  make_dmg.sh  omp_test.py  pydns.icns  pydns.spec  pyproject.toml  setup.py
fortran/: build_dns_fortran_min.sh  build_dns_ifx.bat  build_dns_linux.sh  build_dns_linux_omp.sh  build_dns_macos.sh  build_dns_macos_omp.sh  build_dns_macos_omp_311.sh  build_dns_macos_omp_313.sh  build_dns_parallel.sh  build_dns_parallell.sh  dns.f  dns3d.f  dns3d90.f90  dns_driver_min.f  dns_driver_min3d.f  dns_fortran.pyi  dns_fortran_min.pyf  dns_sim_min.py  dns_test.sh  fortran_test.sh  fps_sweep.csv  fps_sweep.sh  fps_sweep.txt  fps_sweep_fortran.csv  pao.f  run_dns.sh  run_dns3d.sh  run_dns3d90.sh  vfft.f  visasub.f  visasub3d.f
